addes variable name